SONARTEXT-82 Improve readability of test output (#188)